[package]
name = "depot"
version = "0.2.0"
authors = ["Jason Longshore <hello@jasonlongshore.com>"]
description = "A (disk) persistent queue library"
homepage = "https://github.com/longshorej/depot"
repository = "https://github.com/longshorej/depot"
readme = "README.md"
keywords = ["persistence", "queue", "storage", "disk", "data"]
license = "Apache-2.0"

[dependencies]

[dev-dependencies]
tempdir = "0.3"
